<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/backgroundPrimary"
        android:gravity="center">

        <TextView
            style="@style/AppTheme.TextPrimary_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_menu_mine" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundSecond"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@color/backgroundPrimary"
                android:padding="@dimen/dp_16">

                <ImageView
                    android:id="@+id/mineAvatar"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:src="@drawable/ic_default_avatar"
                    android:tint="@color/textSecond"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mineNickname"
                    style="@style/AppTheme.TextPrimary_Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/mineAvatar"
                    app:layout_constraintTop_toTopOf="@+id/mineAvatar"
                    tools:text="@string/main_menu_mine"
                    tools:visibility="visible" />


                <TextView
                    android:id="@+id/mineEmail"
                    style="@style/AppTheme.TextPrimary_Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/mineAvatar"
                    app:layout_constraintStart_toEndOf="@+id/mineAvatar"
                    tools:text="@string/main_menu_mine"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/mineLoginOrRegister"
                    style="@style/AppTheme.TextPrimary_Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/mine_login_or_register"
                    app:layout_constraintBottom_toBottomOf="@+id/mineAvatar"
                    app:layout_constraintStart_toEndOf="@+id/mineAvatar"
                    app:layout_constraintTop_toTopOf="@+id/mineAvatar" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_back"
                    android:tint="@color/textSecond"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@color/backgroundPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:layout_marginRight="@dimen/dp_8"
                        android:src="@drawable/mine_integral"
                        android:tint="@color/textPrimary" />

                    <TextView
                        style="@style/AppTheme.TextPrimary_Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_my_integral" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/backgroundSecond" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:layout_marginRight="@dimen/dp_8"
                        android:src="@drawable/mine_integral_rank"
                        android:tint="@color/textPrimary" />

                    <TextView
                        style="@style/AppTheme.TextPrimary_Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_integral_rank" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@color/backgroundPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:layout_marginRight="@dimen/dp_8"
                        android:src="@drawable/mine_share"
                        android:tint="@color/textPrimary" />

                    <TextView
                        style="@style/AppTheme.TextPrimary_Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_my_share" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/backgroundSecond" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:layout_marginRight="@dimen/dp_8"
                        android:src="@drawable/mine_collect"
                        android:tint="@color/textPrimary" />

                    <TextView
                        style="@style/AppTheme.TextPrimary_Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_my_collect" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>